[package]
name = "tiny-bip39-yp"
version = "0.7.4"
authors = [
    "Stephen Oliver <steve@infincia.com>",
    "Maciej Hirsz <hello@maciej.codes>",
]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/maciejhirsz/tiny-bip39/"
repository = "https://github.com/maciejhirsz/tiny-bip39/"
readme = "README.md"
description = "A fork of the bip39 crate with fixes to v0.6. Rust implementation of BIP-0039"
documentation = "https://docs.rs/tiny-bip39"
keywords = ["bip39", "bitcoin", "mnemonic"]
edition = "2018"

[lib]
name = "bip39"
path = "src/lib.rs"

[features]
chinese-simplified = []
chinese-traditional = []
# Note: English is the standard for bip39 so always included
french = []
italian = []
japanese = []
korean = []
spanish = []

default = ["chinese-simplified", "chinese-traditional", "french", "italian", "japanese", "korean", "spanish"]

[dependencies]
failure = "0.1.3"
rustc-hash = "1.0.1"
sha2 = "0.8.1"
hmac = "0.7.1"
pbkdf2 = { version = "0.3.0", default-features = false }
rand = "0.6"
once_cell = { version = "1.2.0", features = [ "parking_lot" ] }
unicode-normalization = "0.1.12"
serde = "1"
serde_derive = "1"

[dev-dependencies]
hex = "0.4.0"
